Use standard border-image, fix tab audio visibility on macOS

--- a/src/chrome/os/darwin/browser.css
+++ b/src/chrome/os/darwin/browser.css
@@ -193,7 +193,7 @@ toolbarbutton.bookmark-item > menupopup {
   padding: 2px 0 4px;
   border-width: 4px 3px 0;
   border-style: solid;
-  -moz-border-image: url("chrome://browser/skin/tabbrowser/tab.png") 4 3 0 fill repeat stretch;
+  border-image: url("chrome://browser/skin/tabbrowser/tab.png") 4 3 0 fill repeat stretch;
   border-radius: 0;
 }
 
@@ -221,7 +221,9 @@ toolbarbutton.bookmark-item > menupopup {
   background-image: var(--tab-pinned-background-hover);
 }
 
-.tabbrowser-tab[selected="true"]:not(:-moz-lwtheme) > * > * > .tab-text {
+.tabbrowser-tab[selected="true"]:not(:-moz-lwtheme),
+.tabbrowser-tab[selected="true"]:not(:-moz-lwtheme) > * > * > .tab-text,
+.tabbrowser-tab[selected="true"]:not(:-moz-lwtheme) > * > * > .tab-icon-sound {
   color: black;
   text-shadow: none;
 }
